--- a/stylesmain.css
+++ b/stylesmain.css
@@ -29,12 +29,20 @@ body::before {
     inset: 0;
 
     background-image: url('src/papel.webp');
-    background-size: 60% auto; /* Más zoom para ver mejor la textura */
+    background-size: 150% auto;
     background-position: center top;
     background-repeat: repeat-y;
 
-    opacity: 0.25; /* Más visible la textura de papel */
+    opacity: 0.1;
     z-index: -1;
+}
+
+/* Textura de papel más visible en celular */
+@media (max-width: 768px) {
+    body::before {
+        background-size: 70% auto;
+        opacity: 0.2;
+    }
 }
 
 
@@ -212,13 +220,13 @@ img {
 
 /* ICONOS A LA IZQUIERDA */
 .event-icon {
-    width: 100px;
+    width: 160px;
     margin-right: 30px;
     padding-left: 60px; /* Espacio para no tapar la línea */
 }
 
 .event-icon img {
-    width: 130px;
+    width: 160px;
     height: auto;
 }
 
@@ -300,14 +308,14 @@ img {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 60px;
-        min-width: 60px;
+        width: 90px;
+        min-width: 90px;
         margin-right: 15px;
         padding-left: 0;
     }
     .event-icon img {
-        width: 50px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
         object-fit: contain;
     }
     .timeline-event {
@@ -319,10 +327,10 @@ img {
         margin: 30px auto;
     }
     .timeline-container::after {
-        left: 35px;
+        left: 45px;
     }
     .timeline-event::before {
-        left: 25px;
+        left: 35px;
     }
     .event-content {
         padding-left: 0;
